# dota-analytics-platform

./: .gitignore  README.md  project.toml  pyproject.toml
app/config/: settings.py
app/db/: check_db.py
app/ingestion/: fetch_heroes.py
src/db/: duckdb.py
src/dota_analytics/config/: config.py
src/dota_analytics/db/: duckdb.py
src/dota_analytics/ingestao/: heroes.py  pro_matches.py  pro_players.py  public_matches.py  test_import.py
src/ingestion/: fetch_match_details.py  fetch_match_details_batch.py  fetch_matches.py
