[project]
name = "dota-analytics-platform"
version = "0.1.0"
description = "Dota 2 analytics platform with medallion architecture"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Eduardo Lopes" }
]

dependencies = [
    "requests>=2.32.5,<3.0.0",
    "pandas>=3.0.0,<4.0.0",
    "duckdb>=1.4.4,<2.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "python-dotenv>=1.2.1,<2.0.0"
]

[tool.poetry]
packages = [{ include = "dota_analytics", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
